err/collective.groupdelegation.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/groupdelegation'...
Listing './lib/python3.5/site-packages/collective/groupdelegation/i18n'...
Listing './lib/python3.5/site-packages/collective/groupdelegation/profiles'...
Listing './lib/python3.5/site-packages/collective/groupdelegation/profiles/default'...
Listing './lib/python3.5/site-packages/collective/groupdelegation/skins'...
Listing './lib/python3.5/site-packages/collective/groupdelegation/skins/groupdelegation'...
Compiling './lib/python3.5/site-packages/collective/groupdelegation/skins/groupdelegation/get_delegated_groups.py'...
***   File "./lib/python3.5/site-packages/collective/groupdelegation/skins/groupdelegation/get_delegated_groups.py", line 24
    return delegated_groups
                          ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/collective.groupdelegation-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
